test/files/neg/anytrait.check
anytrait.scala:3: error: field is prohibited in universal trait extending from Any
  var x = 1
      ^
anytrait.scala:5: error: constructor statement is prohibited in universal trait extending from Any
  { x += 1 }
      ^
two errors found
